<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="contact_email">adu.team.and.vn@gmail.com</string>
    <string name="app_name">Foto Star</string>
    <string name="sticker_lbl_1">Rage comic</string>
    <string name="lbl_english">English</string>
    <string name="msg_rate_checkbox">Do not show again</string>
    <string name="msg_rate">If you like this app, please rate it 5 stars and click +1 button. It motivates us to make our free apps even better! Thanks!</string>
    <string name="lbl_rate_yes">Yes, sure</string>
    <string name="lbl_rate_no">No, exit app</string>
    <string name="lbl_1anguage">Language</string>
    <string name="lbl_automatic">Automatic</string>
    <string name="tv_title_gallery">Gallery</string>
    <string name="tv_title_collage">Photos Collage</string>
    <string name="tv_title_mask_maker">Mask Maker</string>
    <string name="tv_title_text_maker">Text Maker</string>
    <string name="tv_title_single_edit">Photo Editor</string>
    <string name="msg_max_pick">The maximum is %1$d!</string>
    <string name="msg_confirm_delete">Are you sure want to delete?</string>
    <string name="msg_confirm_back">Are you sure want to go back?</string>
    <string name="msg_save_complete">Saved photo in</string>
    <string name="msg_save_err">Cannot save photo!</string>
    <string name="msg_back_press">Press back again to exit!</string>
    <string name="msg_set_wall_complete">New wallpaper has been set!</string>
    <string name="msg_set_wall_err">Cannot set wallpaper!</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="lbl_collage">Collage</string>
    <string name="lbl_confirm_back">Go back?</string>
    <string name="lbl_text_hint">Enter your text here...</string>
    <string name="lbl_slogan">Create your best photo</string>
    <string name="lbl_version">Version</string>
    <string name="msg_min_pick">You must choose at least %1$d photos!</string>
    <string name="tv_picked">Picked  %1$d (Max: %2$d, Min: %3$d)</string>
    <string name="msg_waiting">Please wait...</string>
    <string name="tvmask">Mask</string>
    <string name="tvcamera">Camera</string>
    <string name="tvgallery">Gallery</string>
    <string name="tvedit">Edit</string>
    <string name="tvchange">Change</string>
    <string name="tvdelete">Delete</string>
    <string name="tvlock">Lock</string>
    <string name="tvunlock">Unlock</string>
    <string name="tvlayout">Layout</string>
    <string name="tvfree">Free</string>
    <string name="tvborder">Border/BG</string>
    <string name="tvframe">Frame</string>
    <string name="tvbordersize">Border size:</string>
    <string name="tvsticker">Sticker</string>
    <string name="tvtext">Text</string>
    <string name="tvpaint">Paint</string>
    <string name="tveffect">Effect</string>
    <string name="tvlike">Like app!</string>
    <string name="tvshareapp">Share app</string>
    <string name="tvcontact">Contact us</string>
    <string name="tvshare">Share</string>
    <string name="tvwallpaper">Set as wallpaper</string>
    <string name="tvview">View photo</string>
    <string name="tvpickColor">Pick color</string>
    <string name="mask_lbl_0">Popular</string>
    <string name="mask_lbl_1">Flower</string>
    <string name="mask_lbl_2">Leaves</string>
    <string name="mask_lbl_3">Bird</string>
    <string name="mask_lbl_4">Cat</string>
    <string name="mask_lbl_5">Animals</string>
    <string name="mask_lbl_6">Cloud</string>
    <string name="sticker_lbl_0">Popular</string>
    <string name="sticker_lbl_2">Style</string>
    <string name="sticker_lbl_3">Clip photo</string>
    <string name="banner_ad_banner_unit_id">ca-app-pub-3336718604400772/4642544840</string>
    <string name="banner_ad_wall_unit_id">ca-app-pub-3336718604400772/6119278041</string>
</resources>