<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/menu_bg"
    android:gravity="center"
    android:orientation="vertical">

    <include
        layout="@layout/titlebar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/collage_button"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:background="@drawable/menu_collage_selector" />

                <TextView
                    style="@style/popup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/lbl_collage"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="50dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/choose_from_sd_button"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:background="@drawable/menu_edit_selector" />

                    <TextView
                        style="@style/popup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/tvedit"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/take_picture_button"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:background="@drawable/menu_camera_selector" />

                    <TextView
                        style="@style/popup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/tvcamera"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom|center_vertical"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_banner_unit_id"></com.google.android.gms.ads.AdView>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:background="#22ffffff"
            android:visibility="gone">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="left|center_vertical"
                android:text="Share" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="right|center_vertical"
                android:text="Like" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|top">

            <TextView
                style="@style/popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:text="@string/lbl_1anguage"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/languageList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="3dp"
                android:gravity="right|center_vertical" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>