<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_group"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="#0000" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/bg_gallery"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/sharebtn"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@drawable/menu_share_selector" />

            <TextView
                android:id="@+id/sharetv"
                style="@style/popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/tvshare" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/wallbtn"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:background="@drawable/finish_wall_selector" />

            <TextView
                android:id="@+id/walltv"
                style="@style/popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/tvwallpaper" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/viewbtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/finish_view_selector" />

            <TextView
                android:id="@+id/viewtv"
                style="@style/popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/tvview" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>