<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_group"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="#0000" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/menu_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/likebtn"
                android:layout_width="40dp"
                android:layout_height="32dp"
                android:background="@drawable/menu_like_selector" />

            <TextView
                android:id="@+id/liketv"
                style="@style/popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="-5dp"
                android:layout_marginLeft="10dp"
                android:text="@string/tvlike" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/sharebtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/menu_share_selector" />

            <TextView
                android:id="@+id/sharetv"
                style="@style/popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/tvshareapp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/contactbtn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/menu_contact_selector" />

            <TextView
                android:id="@+id/contacttv"
                style="@style/popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/tvcontact" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>